2003-09-02  Eric Doenges <Eric.Doenges@DynaPel.com>

	* src/common/tty.c: Make tty_select prototype match implementation.
	* src/common/termiostty.c: Make termios_select prototype match 
	implementation.

2003-09-02  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/common/serial.c: Make serial_select prototype match
	implementation.

2003-06-09  Nick Garnett  <nickg@balti.calivar.com>

	* src/common/serial.c: Changed all calls to cyg_drv_cond_signal()
	to cyg_drv_cond_broadcast(). Removed comment asking whether this
	matters: it does.

	* include/serialio.h: Added includes of pkgconf files so that the
	ifdefs in this file work properly.
	
	* include/serial.h: Added include of devtab.h to fix compile
	error.

2003-05-21  Gary Thomas  <gary@mlbassoc.com> 	

	* src/common/serial.c (serial_get_config): Restart receiver 
	after input queue flush if it had been throttled.  Inspired
	by David Marqvar <DAM@tt.dk>

2003-03-25  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/common/serial.c (serial_get_config): For both INPUT_FLUSH
	and OUTPUT_FLUSH keys, pass down to the hardware driver as well
	to allow it to flush FIFOs.
	Based on patch from Roland Cassebohm.

2003-03-20  Gary Thomas  <gary@mlbassoc.com>

	* src/common/serial.c: Only return -EAGAIN if no data moved.

2003-03-11  Gary Thomas  <gary@mlbassoc.com>

	* src/common/termiostty.c (termios_read): VMIN handling still wasn't
	quite correct.  When VMIN > 0, at least VMIN characters should be
	read.

2003-02-24  Jonathan Larmour  <jifl@eCosCentric.com>

	* cdl/io_serial.cdl: Fix doc link.

2003-02-14  Jonathan Larmour  <jifl@eCosCentric.com>

	* src/common/termiostty.c: Support VMIN > 0 properly.

2002-12-10  Gary Thomas  <gthomas@ecoscentric.com>

	* src/common/tty.c (tty_write): Only return number of characters
	in original string which were written - don't include any CR/LF
	expansion characters.

2002-04-23  Jesper Skov  <jskov@redhat.com>

	* tests/serial3.c (serial_test): Use 19200 baud rate when board